--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bcard__header">
           <img
             class="bcard__profile-img"
-            src="./assets/profile_img_800.jpeg"
+            src="./assets/WhatsApp Image 2023-08-24 at 17.07.26.jpeg"
             alt="Profile Image"
           />
         </div>
@@ -23,7 +23,7 @@
         <!-- Body -->
         <div class="bcard__body">
           <div class="bcard__heading-wrapper">
-            <h1 class="bcard__name">John Doe</h1>
+            <h1 class="bcard__name">Furkan Efe</h1>
             <h2 class="bcard__title">Student</h2>
             <div class="bcard__website">
               <a
