project is chanced

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 "
                 href="#"
                 target="__blank"
-                >johndoe.com</a
+                >furkanefe.com</a
               >
             </div>
           </div>
 
           <div class="bcard__btn-wrapper">
-            <a href="mailto:#" target="__blank">
+            <a href="mailto:furkanefesekeroglu@gmail.com" target="__blank">
               <button class="bcard__btn bcard__btn--email">
                 <i class="bcard__btn-icon fa-regular fa-envelope"></i>Email</button></a>
             <a href="#" target="__blank">
