btn wrapper styles added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="mailto:furkanefesekeroglu@gmail.com" target="__blank">
               <button class="bcard__btn bcard__btn--email">
                 <i class="bcard__btn-icon fa-regular fa-envelope"></i>Email</button></a>
-            <a href="#" target="__blank">
+            <a href="https://www.linkedin.com/in/furkan-efe-%C5%9Fekero%C4%9Flu-4140a228a/" target="__blank">
                 <button class="bcard__btn bcard__btn--linkedin">
                 <i class="bcard__btn-icon fa-brands fa-linkedin"></i>Linkedin</button></a>
           </div>
