--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- Footer -->
         <div class="bcard__footer">
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-twitter"></i></a>
+          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-youtube"></i></a>
           <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-instagram"></i></a>
           <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-github"></i></a>
         </div>
