--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
         <!-- Footer -->
         <div class="bcard__footer">
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-youtube"></i></a>
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-instagram"></i></a>
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-github"></i></a>
+          <a class="bcard__footer-icon" href="https://www.youtube.com/channel/UCI6lXg10UU9ZSF1CsmkXo6w" target="__blank"><i class="fa-brands fa-youtube"></i></a>
+          <a class="bcard__footer-icon" href="https://instagram.com/furkan_ef.e?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="__blank"><i class="fa-brands fa-instagram"></i></a>
+          <a class="bcard__footer-icon" href="https://github.com/furkanEfe1" target="__blank"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
     </div>
