about me is changed

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <div class="bcard__about">
               <h3 class="bcard__heading">About Me</h3>
               <p class="bcard__text">
-                I am a Full Stack Web Developer. I have been working on
+                I am a Jr. Software Developer. I have been working on
                 Blockchain and Web3 technologies for a while. I am also a
-                self-learner and I love to learn new things.
+                self-learner and I love to learn front end development.
               </p>
               <p class="bcard__text">
                 #whoami
